# voronoi

./: .agent-prompt.txt  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.beads/: dolt-server.activity  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.claude/: settings.json
.claude/commands/: merge.md  progress.md  spawn.md  standup.md  swarm.md  teardown.md
.claude/hooks/: pre-tool-guard.sh  session-start.sh
.github/: copilot-instructions.md
.github/agents/: auditor.agent.md  catalyst.agent.md  critic.agent.md  detective.agent.md  evaluator.agent.md  explorer.agent.md  investigator.agent.md  scout.agent.md  (+8 more)
.swarm/: journal.md
demos/: README.md  forgetting_cure  run_ecosystem.py  swarm_demo.sh
docker/: voronoi-python.Dockerfile
docs/: AGENT-ROLES.md  ARCHITECTURE.md  CLI.md  CONTEXT-MANAGEMENT.md  DATA-STRUCTURES.md  GATEWAY.md  GLOSSARY.md  INVARIANTS.md  MANIFEST.md  PLATFORM-UNIFICATION.md  README.md  SCIENCE.md  SERVER.md  SPEC-INDEX.md  WORKFLOWS.md
scripts/: autopilot.sh  check-spec-index.py  convergence-gate.sh  convergence-judge.sh  cron-standup.sh  dashboard.py  figure-lint.sh  health-check.sh  lab-notebook.sh  merge-agent-generic.sh  merge-agent.sh  notify-telegram.sh  plan-tasks.sh  quality-gate.sh  sandbox-exec.sh  spawn-agent-generic.sh  spawn-agent.sh  standup.sh  swarm-init.sh  sync-package-data.sh  teardown.sh  telegram-bridge.py  validation-feedback.sh
src/: __init__.py  main.py  visualize.py
templates/: agent-prompt.md  convergence-prompt.md  epic-template.md  improvement-task-prompt.md  investigator-prompt.md  standup-report.md
tests/: conftest.py  test_ants.py  test_beads.py  test_birds.py  test_bridge.py  test_citation_coverage.py  test_claims.py  test_cli.py  test_codename.py  test_compact.py  test_config.py  test_demo_pipeline.py  test_dispatcher.py  test_events.py  test_fireflies.py  test_handoff.py  test_health_check.py  test_intent.py  test_interpretation.py  test_knowledge.py  test_lab_kg.py  test_literature.py  test_locked_claim.py  test_manifest.py  test_mcp.py  test_memory.py  test_progress.py  test_provenance.py  test_publisher.py  test_queue.py  test_repo_url.py  test_report.py  test_runner.py  test_runtime_customizations.py  test_runtime_scripts.py  test_sandbox.py  test_science.py  test_server_cli.py  test_snapshot.py  test_unified_prompt.py  (+5 more)
(+288 files in other folders)
