[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voronoi"
version = "0.1.0"
description = "Orchestrate multiple AI coding agents working in parallel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "swarm", "copilot", "claude"]

[project.optional-dependencies]
dashboard = ["rich>=13.0"]

[project.scripts]
voronoi = "voronoi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voronoi = ["data/**/*"]
