[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voronoi"
version = "0.3.0"
description = "Orchestrate multiple AI coding agents working in parallel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "swarm", "copilot", "claude", "science"]

[project.optional-dependencies]
dashboard = ["rich>=13.0"]
telegram = ["python-telegram-bot>=20.0"]

[project.scripts]
voronoi = "voronoi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voronoi = ["data/**/*"]

# NOTE: Before building a distributable package (pip install . / python -m build),
# run: ./scripts/sync-package-data.sh
# This copies scripts/, demos/, .github/, CLAUDE.md, AGENTS.md into src/voronoi/data/.
# Editable installs (pip install -e .) don't need this — the CLI finds the repo root.
