[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voronoi"
version = "0.4.0"
description = "Orchestrate multiple AI coding agents working in parallel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "swarm", "copilot", "claude", "science"]

[project.optional-dependencies]
dashboard = ["rich>=13.0"]
telegram = ["python-telegram-bot[job-queue]>=20.0"]
report = ["fpdf2>=2.7", "pypandoc_binary>=1.13"]

[project.scripts]
voronoi = "voronoi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voronoi = ["data/**/*"]

# NOTE: All runtime content (agents, prompts, skills, scripts, demos, templates)
# lives in src/voronoi/data/ — the canonical location tracked in git.
# Only .env.example needs syncing: ./scripts/sync-package-data.sh
